feat: implementação dos testes de order product
